traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:20: error: not found: value ecrireMessage
    ecrireMessage(compteur)
    ^TraversalByColumn:24: error: not found: value i
      case _ => setPos(i+1,j+1)    
                       ^TraversalByColumn:24: error: not found: value j
      case _ => setPos(i+1,j+1)    
                           ^TraversalByColumn:27: error: not found: value ecrireMessage
  ecrireMessage(48)
  ^